# DeTerminal

./: .rustfmt.toml  Cargo.toml  README.md  clippy.toml
.github/workflows/: release.yml
installer/windows/: setup.iss
src/: ai.rs  commands.json  exec.rs  main.rs
