[package]
name = "determinal"
version = "0.1.0"
edition = "2024"
authors = ["Earl Red <earled@users.noreply.github.com>"]
description = "DeTerminal: Semantic Terminal AI Assistant that suggests and corrects shell commands using AI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/earled/determinal"
homepage = "https://github.com/earled/determinal"
keywords = ["cli", "terminal", "ai", "shell", "assistant"]
categories = ["command-line-utilities"]
autobins = true

[dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"
lazy_static = "1.4"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
sys-info = "0.9"
which = "6.0.0"